--- a/AB Test/Analyze_ab_test_Udacity.ipynb
+++ b/AB Test/Analyze_ab_test_Udacity.ipynb
@@ -3297,8 +3297,8 @@
     "\n",
     "* If an individual is from CA and use a new page, he is 1.069775 times more likely to make a conversion than if he is from CA and use an old page, holding all other variables constant.\n",
     "\n",
-    "* there is no effict in the conversion rate if an indivisual uses old page or new page \n",
-    "* there is no effict in the conversion rate if user is in a specific country or other country.\n",
+    "* there is no effect in the conversion rate if an indivisual uses old page or new page \n",
+    "* there is no effect in the conversion rate if user is in a specific country or other country.\n",
     "\n",
     "* there is no diffrence in the conversion rate if an indivisual uses one of the pages and he is in a specific country."
    ]
